
- Added wx-config --optional-libs command line option (John Labenski).

All (GUI):

- Added wxH[V]ScrolledWindow (Brad Anderson, Bryan Petty).
- Added wxDC::StretchBlit() for wxMac and wxMSW (Vince Harron).
- Added support for drop down toolbar buttons (Tim Kosse).
- Added support for labels for toolbar controls (Vince Harron).
- Added wxMessageDialog::SetMessage() and SetExtendedMessage().
- Added wxBG_STYLE_TRANSPARENT background style (Julian Scheid)
- Added XRCSIZERITEM() macro for obtaining sizers from XRC (Brian Vanderburg II)
- New and improved wxFileCtrl (Diaa Sami and Marcin Wojdyr)
- Added wxEventBlocker class (Francesco Montorsi).
- Added wxFile/DirPickerCtrl::Get/SetFile/DirName() (Francesco Montorsi).
- Added wxSizerFlags::Top() and Bottom().
- Slovak translation added.
- Fixed tab-related drawing and hit-testing bugs in wxRichTextCtrl.
- Implemented background colour in wxRichTextCtrl.
- Fixed crashes in helpview when opening a file.
- Set locale to the default in all ports, not just wxGTK.
- Added wxJoystick::GetButtonState/Position() (Frank C Szczerba).
- Added wxGridUpdateLocker helper class (Evgeniy Tarassov).
- Support wxGRID_AUTOSIZE in wxGrid::SetRow/ColLabelSize() (Evgeniy Tarassov).
- Added wxWindow::NavigateIn() in addition to existing Navigate().
- Add support for <data> tags to wxrc.
- Support wxAPPLY and wxCLOSE in CreateStdDialogButtonSizer() (Marcin Wojdyr).
- Show standard options in wxCmdLineParser usage message (Francesco Montorsi).
- Added wxRect::operator+ (union) and * (intersection) (bdonner).
- Added support for two auxiliary mouse buttons to wxMouseEvent (Chris Weiland).
- Added wxToolTip::SetAutoPop() and SetReshow() (Jan Knepper).
- Added wxTaskBarIcon::Destroy().
- Added XRC handler for wxSearchCtrl (Sander Berents).
- Read image resolution from TIFF, JPEG and BMP images (Maycon Aparecido Gasoto).
- Add support for reading alpha data from TIFF images.
- Added wxSYS_DCLICK_TIME system metric constant (Arne Steinarson).